<resources>
    <string name="app_name">C5ISR Renderer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="symbolid_hint">SFGP------*****</string>
    <string name="btn_draw_label">Draw</string>
    <string name="back_btn_label">Back</string>
    <string name="configure_btn_label">Configure %1$s</string>
    <string name="hide_children">Hide subtypes</string>
    <string name="show_children">Show subtypes</string>
    <string name="context_label">Context</string>
    <string name="context_label_reality">Reality</string>
    <string name="context_label_exercise">Exercise</string>
    <string name="context_label_simulation">Simulation</string>
    <string name="std_id_label">Standard Identity</string>
    <string-array name="std_id_array">
        <item>Pending</item>
        <item>Unknown</item>
        <item>Assumed Friend</item>
        <item>Friend</item>
        <item>Neutral</item>
        <item>Suspect/Joker</item>
        <item>Hostile/Faker</item>
    </string-array>
    <string name="status_label">Status</string>
    <string-array name="status_array">
        <item>Present</item>
        <item>Planned/Anticipated/Suspect</item>
        <item>Present/Fully capable</item>
        <item>Present/Damaged</item>
        <item>Present/Destroyed</item>
        <item>Present/Full to capacity</item>
    </string-array>
    <string name="hq_label">Headquarters/Task Force/Dummy</string>
    <string-array name="hq_array">
        <item>Unknown</item>
        <item>Feint/Decoy/Dummy</item>
        <item>Headquarters</item>
        <item>Feint/Dummy Headquarters</item>
        <item>Task Force</item>
        <item>Feint/Dummy Task Force</item>
        <item>Task Force Headquarters</item>
        <item>Feint/Dummy Task Force Headquarters</item>
    </string-array>
    <string name="amplifier_category_label">Amplifier Category</string>
    <string-array name="amplifier_category_array">
        <item>Unknown</item>
        <item>Echelon at brigade and below</item>
        <item>Echelon at division and above</item>
        <item>Equipment mobility on land</item>
        <item>Equipment mobility on snow</item>
        <item>Equipment mobility on water</item>
        <item>Naval towed array</item>
    </string-array>
    <string name="amplifier_type_label">Amplifier Type</string>
    <string-array name="amp0_unknown_array">
        <item>(N/A)</item>
    </string-array>
    <string-array name="amp1_echelon_bb_array">
        <item>Team/Crew</item>
        <item>Squad</item>
        <item>Section</item>
        <item>Platoon/detachment</item>
        <item>Company/battery/troop</item>
        <item>Battalion/squadron</item>
        <item>Regiment/group</item>
        <item>Brigade</item>
    </string-array>
    <string-array name="amp2_echelon_da_array">
        <item>Division</item>
        <item>Corps/MEF</item>
        <item>Army</item>
        <item>Army Group/front</item>
        <item>Region/Theater</item>
        <item>Command</item>
    </string-array>
    <string-array name="amp3_eqp_land_array">
        <item>Wheeled limited cross country</item>
        <item>Wheeled cross country</item>
        <item>Tracked</item>
        <item>Wheeled and tracked combination</item>
        <item>Towed</item>
        <item>Rail</item>
        <item>Pack animals</item>
    </string-array>
    <string-array name="amp4_eqp_snow_array">
        <item>Over snow (prime mover)</item>
        <item>Sled</item>
    </string-array>
    <string-array name="amp5_eqp_water_array">
        <item>Barge</item>
        <item>Amphibious</item>
    </string-array>
    <string-array name="amp6_naval_towed_array">
        <item>Short towed array</item>
        <item>Long towed Array</item>
    </string-array>
    <string name="send_btn_label">Pick %1$s</string>
    <string name="extra_mods_btn_label">Extra\nModifiers</string>
    <string name="attributes_btn_label">Attributes</string>
    <string name="save_btn_label">Save</string>
    <string name="sector_1_label">Sector 1 Modifier</string>
    <string name="sector_2_label">Sector 2 Modifier</string>
    <string-array name="ss_NotApplicable_array">
        <item>[Not applicable to this symbol.]</item>
    </string-array>
    <string-array name="ss_Air_sector1_array">
        <item>Not Applicable</item>
        <item>Attack/Strike</item>
        <item>Bomber</item>
        <item>Cargo</item>
        <item>Fighter</item>
        <item>Interceptor</item>
        <item>Tanker</item>
        <item>Utility</item>
        <item>Vertical or Short Take-off and Landing (VSTOL)/ Vertical Take-off and Landing (VTOL)</item>
        <item>Passenger</item>
        <item>Ultra Light</item>
        <item>Airborne Command Post (ACP)</item>
        <item>Airborne Early Warning (AEW)</item>
        <item>Government</item>
        <item>Medical Evacuation (MEDEVAC)</item>
        <item>Escort</item>
        <item>Electronic Combat (EC)/Jammer</item>
        <item>Patrol</item>
        <item>Reconnaissance</item>
        <item>Trainer</item>
        <item>Photographic (Reconnaissance)</item>
        <item>Personnel Recovery </item>
        <item>Antisubmarine Warfare</item>
        <item>Communications</item>
        <item>Electronic Support (ES)</item>
        <item>Mine Countermeasures (MCM)</item>
        <item>Search and Rescue</item>
        <item>Special Operations Forces</item>
        <item>Surface Warfare</item>
        <item>Very Important Person (VIP) Transport</item>
        <item>Combat Search and Rescue (CSAR)</item>
        <item>Suppression of Enemy Air Defenses</item>
        <item>Antisurface Warfare</item>
        <item>Fighter/Bomber</item>
        <item>Intensive Care</item>
        <item>Electronic Attack (EA)</item>
        <item>Multi-Mission</item>
        <item>Hijacking/Hijacked</item>
        <item>ASW Helo- LAMPS</item>
        <item>ASW Helo – SH-60R</item>
        <item>Hijacker</item>
        <item>Cyberspace</item>
    </string-array>
    <string-array name="ss_Air_sector2_array">
        <item>Not Applicable</item>
        <item>Heavy</item>
        <item>Medium</item>
        <item>Light</item>
        <item>Boom–Only</item>
        <item>Drogue–Only</item>
        <item>Boom and Drogue</item>
        <item>Close Range</item>
        <item>Short Range</item>
        <item>Medium Range</item>
        <item>Long Range</item>
        <item>Downlinked</item>
        <item>Cyberspace</item>
    </string-array>
    <string-array name="ss_AirMissile_sector1_array">
        <item>Unspecified</item>
        <item>Air</item>
        <item>Surface</item>
        <item>Subsurface</item>
        <item>Space</item>
        <item>Anti–Ballistic</item>
        <item>Ballistic</item>
        <item>Cruise</item>
        <item>Interceptor</item>
    </string-array>
    <string-array name="ss_AirMissile_sector2_array">
        <item>Unspecified</item>
        <item>Air</item>
        <item>Surface</item>
        <item>Subsurface</item>
        <item>Space</item>
        <item>Launched</item>
        <item>Missile</item>
        <item>Patriot</item>
        <item>Standard Missile-2 (SM-2)</item>
        <item>Standard Missile-6 (SM-6)</item>
        <item>Evolved Sea Sparrow Missile (ESSM)</item>
        <item>Rolling Airframe Missile (RAM)</item>
        <item>Short Range</item>
        <item>Medium Range</item>
        <item>Intermediate Range</item>
        <item>Long Range</item>
        <item>Intercontinental</item>
    </string-array>
    <string-array name="ss_Space_sector1_array">
        <item>Unspecified</item>
        <item>Low Earth Orbit (LEO)</item>
        <item>Medium Earth Orbit  (MEO)</item>
        <item>High Earth Orbit  (HEO)</item>
        <item>Geosynchronous Orbit (GSO)</item>
        <item>Geostationary Orbit (GO)</item>
        <item>Molniya Orbit (MO)</item>
        <item>Cyberspace</item>
    </string-array>
    <string-array name="ss_Space_sector2_array">
        <item>Unspecified</item>
        <item>Optical</item>
        <item>Infrared</item>
        <item>Radar</item>
        <item>Signals Intelligence (SIGINT)</item>
        <item>Cyberspace</item>
    </string-array>
    <string-array name="ss_SpaceMissile_sector1_array">
        <item>Unspecified</item>
        <item>Ballistic</item>
        <item>Space</item>
        <item>Interceptor</item>
    </string-array>
    <string-array name="ss_SpaceMissile_sector2_array">
        <item>Unspecified</item>
        <item>Short Range</item>
        <item>Medium Range</item>
        <item>Intermediate Range</item>
        <item>Long Range</item>
        <item>Intercontinental </item>
        <item>Arrow</item>
        <item>Ground-Based Interceptor (GBI)</item>
        <item>Patriot</item>
        <item>Standard Missile Terminal Phase (SM-T)</item>
        <item>Standard Missile – 3 (SM-3)</item>
        <item>Terminal High Altitude Area Defense (THAAD)</item>
        <item>Space</item>
        <item>Close Range (CRBM)</item>
        <item>Debris</item>
        <item>Unknown</item>
    </string-array>
    <string name="ss_mine_type_label">(Optional) Specify up to 3 mine types:</string>
    <string name="antipersonnel_mine_label">Antipersonnel Mine</string>
    <string name="antipersonnel_mine_directional_label">Antipersonnel Mine with Directional Effects</string>
    <string name="antitank_mine_label">Antitank Mine</string>
    <string name="antitank_mine_antihandling_label">Antitank Mine with Antihandling Device</string>
    <string name="wide_area_antitank_mine_label">Wide Area Antitank Mine</string>
    <string name="mine_cluster_label">Mine Cluster</string>
    <string name="outline_label">Draw outline for visibility?</string>
    <string name="extra_modifiers_label">Extra Modifiers</string>
    <string name="country_label">Country</string>
    <string name="search_label">Search…</string>
    <string name="attributes_label">Attributes</string>
    <string name="line_color_label">Line Color</string>
    <string name="fill_color_label">Fill Color</string>
    <string name="line_width_label">Line Width</string>
    <string name="text_color_label">Text Color</string>
    <string name="datetime_now_label">Set to Now</string>
    <string name="datetime_on_order_label">On Order</string>
    <string name="datetime_confirm_label">Confirm</string>
</resources>