<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/black_border"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/black_border"
        android:timePickerMode="spinner" />

    <LinearLayout
        android:id="@+id/datetimeFooter"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/datetime_now_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/datetime_now_label" />

        <Button
            android:id="@+id/datetime_on_order_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/datetime_on_order_label" />

        <Button
            android:id="@+id/datetime_confirm_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/datetime_confirm_label" />

    </LinearLayout>

</LinearLayout>