<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="armyc2.c5isr.renderer.symbolpicker.SymbolPickerActivity">

    <SearchView
        android:id="@+id/symbol_picker_search"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <RelativeLayout
        android:id="@+id/symbol_picker_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/symbol_picker_search"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/symbol_picker_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/symbol_picker_flatten_toggle"
            android:paddingHorizontal="15dp" />

        <ToggleButton
            android:id="@+id/symbol_picker_flatten_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingHorizontal="15dp"
            android:textOff="@string/show_children"
            android:textOn="@string/hide_children" />
    </RelativeLayout>

    <GridView
        android:id="@+id/symbol_picker_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/symbol_picker_footer"
        android:layout_below="@+id/symbol_picker_header"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:padding="15dp"
        android:stretchMode="spacingWidth"
        android:verticalSpacing="10dp" />

    <LinearLayout
        android:id="@+id/symbol_picker_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/symbol_picker_back_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/back_btn_label" />

        <ImageView
            android:id="@+id/selected_symbol_iv"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_marginBottom="4dip"
            android:background="@drawable/black_border"
            android:padding="4dip"
            android:src="@drawable/ic_launcher" />

        <Button
            android:id="@+id/symbol_picker_configure_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/configure_btn_label" />
    </LinearLayout>

</RelativeLayout>